a little Bash replaces a lot of Swift

--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -1,6 +1,7 @@
 name: package
 
 on:
+    workflow_dispatch:
     #   We build semver tags, and the master branch.
     push:
         branches: [ master ]
@@ -12,6 +13,13 @@ jobs:
         runs-on: macos-15
         name: macOS
         steps:
+            -   name: Setup AWS CLI
+                uses: aws-actions/configure-aws-credentials@v1
+                with:
+                    aws-secret-access-key: ${{ secrets.AWS_S3_ACCESS_SECRET }}
+                    aws-access-key-id: ${{ vars.AWS_S3_ACCESS_KEY }}
+                    aws-region: us-east-1
+
             -   name: Checkout repository
                 uses: actions/checkout@v3
 
@@ -20,34 +28,37 @@ jobs:
                     UNIDOC_ENABLE_INDEXSTORE: "1"
                 run: |
                     swift --version
-                    swift build -c release --product unidoc-publish
                     swift build -c release --product unidoc
+                    Scripts/Package
 
             -   name: Upload products
                 env:
-                    AWS_S3_ACCESS_SECRET: ${{ secrets.AWS_S3_ACCESS_SECRET }}
-
                     UNIDOC_PLATFORM: "${{ runner.os }}-${{ runner.arch }}"
                     UNIDOC_VERSION: ${{ github.head_ref || github.ref_name }}
 
                 run: |
-                    .build/release/unidoc-publish \
-                        unidoc \
-                        /unidoc/$UNIDOC_VERSION/$UNIDOC_PLATFORM/unidoc \
-                        --secret "$AWS_S3_ACCESS_SECRET"
+                    aws s3 cp unidoc.tar.gz \
+                        s3://swiftinit/unidoc/$UNIDOC_VERSION/$UNIDOC_PLATFORM/unidoc.tar.gz \
+                        --content-encoding gzip \
+                        --content-type application/gzip
 
     linux:
         runs-on: ubuntu-24.04
         name: Ubuntu 24.04
         steps:
+            -   name: Setup AWS CLI
+                uses: aws-actions/configure-aws-credentials@v1
+                with:
+                    aws-secret-access-key: ${{ secrets.AWS_S3_ACCESS_SECRET }}
+                    aws-access-key-id: ${{ vars.AWS_S3_ACCESS_KEY }}
+                    aws-region: us-east-1
+
             -   name: Install Swift
                 uses: tayloraswift/swift-install-action@master
                 with:
                     swift-prefix: "swift-6.0.1-release/ubuntu2404/swift-6.0.1-RELEASE"
                     swift-id: "swift-6.0.1-RELEASE-ubuntu24.04"
 
-            #   This clobbers everything in the current directory, which is why we installed
-            #   the Swift toolchain in the home directory.
             -   name: Checkout repository
                 uses: actions/checkout@v3
 
@@ -60,24 +71,18 @@ jobs:
                     swift --version
                     swift build -c release \
                         --static-swift-stdlib \
-                        --product unidoc-publish \
-                        -Xcxx -I$SWIFT_INSTALLATION/lib/swift \
-                        -Xcxx -I$SWIFT_INSTALLATION/lib/swift/Block
-                    swift build -c release \
-                        --static-swift-stdlib \
                         --product unidoc \
                         -Xcxx -I$SWIFT_INSTALLATION/lib/swift \
                         -Xcxx -I$SWIFT_INSTALLATION/lib/swift/Block
+                    Scripts/Package
 
             -   name: Upload products
                 env:
-                    AWS_S3_ACCESS_SECRET: ${{ secrets.AWS_S3_ACCESS_SECRET }}
-
                     UNIDOC_PLATFORM: "${{ runner.os }}-${{ runner.arch }}"
                     UNIDOC_VERSION: ${{ github.head_ref || github.ref_name }}
 
                 run: |
-                    .build/release/unidoc-publish \
-                        unidoc \
-                        /unidoc/$UNIDOC_VERSION/$UNIDOC_PLATFORM/unidoc \
-                        --secret "$AWS_S3_ACCESS_SECRET"
+                    aws s3 cp unidoc.tar.gz \
+                        s3://swiftinit/unidoc/$UNIDOC_VERSION/$UNIDOC_PLATFORM/unidoc.tar.gz \
+                        --content-encoding gzip \
+                        --content-type application/gzip
