--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -74,7 +74,13 @@ jobs:
                         --product unidoc \
                         -Xcxx -I$SWIFT_INSTALLATION/lib/swift \
                         -Xcxx -I$SWIFT_INSTALLATION/lib/swift/Block
+                    swift build -c release \
+                        --static-swift-stdlib \
+                        --product unidoc-linkerd \
+                        -Xcxx -I$SWIFT_INSTALLATION/lib/swift \
+                        -Xcxx -I$SWIFT_INSTALLATION/lib/swift/Block
                     Scripts/Package
+                    Scripts/PackageLinker
 
             -   name: Upload products
                 env:
@@ -84,5 +90,9 @@ jobs:
                 run: |
                     aws s3 cp unidoc.tar.gz \
                         s3://swiftinit/unidoc/$UNIDOC_VERSION/$UNIDOC_PLATFORM/unidoc.tar.gz \
+                        --content-encoding gzip \
+                        --content-type application/gzip
+                    aws s3 cp unidoc-linkerd.tar.gz \
+                        s3://swiftinit/unidoc/$UNIDOC_VERSION/$UNIDOC_PLATFORM/unidoc-linkerd.tar.gz \
                         --content-encoding gzip \
                         --content-type application/gzip
