--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -96,3 +96,45 @@ jobs:
                         s3://swiftinit/unidoc/$UNIDOC_VERSION/$UNIDOC_PLATFORM/unidoc-linkerd.tar.gz \
                         --content-encoding gzip \
                         --content-type application/gzip
+
+    linux-aarch64:
+        runs-on: ubuntu-24.04
+        name: Ubuntu 24.04
+        steps:
+            -   name: Setup AWS CLI
+                uses: aws-actions/configure-aws-credentials@v1
+                with:
+                    aws-secret-access-key: ${{ secrets.AWS_S3_ACCESS_SECRET }}
+                    aws-access-key-id: ${{ vars.AWS_S3_ACCESS_KEY }}
+                    aws-region: us-east-1
+
+            -   name: Checkout repository
+                uses: actions/checkout@v3
+
+            -   name: Build products
+                run: |
+                    docker run -t --rm \
+                        -v $PWD:/swift-unidoc \
+                        -w /swift-unidoc \
+                        -e UNIDOC_ENABLE_INDEXSTORE=1 \
+                        tayloraswift/swift-cross-aaarch64:master \
+                        /home/ubuntu/x86_64/swift/usr/bin/swift build \
+                            -c release --destination Scripts/aarch64-unknown-linux-gnu.json
+
+                    Scripts/Package
+                    Scripts/PackageLinker
+
+            -   name: Upload products
+                env:
+                    UNIDOC_PLATFORM: "${{ runner.os }}-ARM64"
+                    UNIDOC_VERSION: ${{ github.head_ref || github.ref_name }}
+
+                run: |
+                    aws s3 cp unidoc.tar.gz \
+                        s3://swiftinit/unidoc/$UNIDOC_VERSION/$UNIDOC_PLATFORM/unidoc.tar.gz \
+                        --content-encoding gzip \
+                        --content-type application/gzip
+                    aws s3 cp unidoc-linkerd.tar.gz \
+                        s3://swiftinit/unidoc/$UNIDOC_VERSION/$UNIDOC_PLATFORM/unidoc-linkerd.tar.gz \
+                        --content-encoding gzip \
+                        --content-type application/gzip
