--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -117,10 +117,11 @@ jobs:
                         -v $PWD:/swift-unidoc \
                         -w /swift-unidoc \
                         -e UNIDOC_ENABLE_INDEXSTORE=1 \
-                        tayloraswift/swift-cross-aarch64:master \
+                        tayloraswift/swift-cross-aarch64:6.0.2 \
                         /home/ubuntu/x86_64/swift/usr/bin/swift build \
                             -c release \
-                            --destination Scripts/aarch64-unknown-linux-gnu.json
+                            --destination Scripts/aarch64-unknown-linux-gnu.json \
+                            --static-swift-stdlib
 
                     Scripts/Package
                     Scripts/PackageLinker
