add additional SwiftSyntax logic that monkey-patches the upsteam bug https://github.com/swiftlang/swift/issues/78343

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /Assets/secrets/
 /Assets/icons/*.jpg
 
+/TestModules/SymbolGraphs/*.json
 /TestModules/*.json
 /TestPackages/*.bson
 /TypeScript/node_modules
