no -ljemalloc in the prebuilt unidoc binary

--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -69,12 +69,50 @@ jobs:
             -   name: Checkout repository
                 uses: actions/checkout@v3
 
+            -   name: Build Unidoc
+                run: |
+                    Scripts/Linux/Build ${{ matrix.arch.id }} \
+                        --os ${{ matrix.os.codename }} \
+                        --no-jemalloc
+                    Scripts/Package .build.${{ matrix.arch.id }} \
+                        unidoc
+
+            -   name: Upload products
+                env:
+                    UNIDOC_PLATFORM: "${{ matrix.os.version }}-${{ matrix.arch.name }}"
+                    UNIDOC_VERSION: ${{ github.head_ref || github.ref_name }}
+
+                run: Scripts/Deploy unidoc.tar.gz
+
+    linux_server:
+        strategy:
+            matrix:
+                os:
+                    -   codename: noble
+                        version: Ubuntu-24.04
+                        display: Ubuntu 24.04
+                arch:
+                    -   id: aarch64
+                        name: ARM64
+
+        runs-on: ubuntu-24.04
+        name: "${{ matrix.os.display }} (${{ matrix.arch.id }})"
+        steps:
+            -   name: Setup AWS CLI
+                uses: aws-actions/configure-aws-credentials@v1
+                with:
+                    aws-secret-access-key: ${{ secrets.AWS_S3_ACCESS_SECRET }}
+                    aws-access-key-id: ${{ vars.AWS_S3_ACCESS_KEY }}
+                    aws-region: us-east-1
+
+            -   name: Checkout repository
+                uses: actions/checkout@v3
+
             -   name: Build products
                 run: |
                     Scripts/Linux/Build ${{ matrix.arch.id }} \
                         --os ${{ matrix.os.codename }}
                     Scripts/Package .build.${{ matrix.arch.id }} \
-                        unidoc \
                         unidoc-linkerd
 
             -   name: Upload products
@@ -82,4 +120,4 @@ jobs:
                     UNIDOC_PLATFORM: "${{ matrix.os.version }}-${{ matrix.arch.name }}"
                     UNIDOC_VERSION: ${{ github.head_ref || github.ref_name }}
 
-                run: Scripts/Deploy unidoc.tar.gz unidoc-linkerd.tar.gz
+                run: Scripts/Deploy unidoc-linkerd.tar.gz
