--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -55,6 +55,7 @@ jobs:
 
             -   name: Build release
                 run: |
+                    which swift
                     swift --version
                     swift build -c release \
                         --product ssgc \
