the runner uses a different runtime layout

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -60,7 +60,8 @@ jobs:
                     swift build -c release \
                         --product ssgc \
                         --explicit-target-dependency-import-check=error \
-                        --destination Scripts/Linux/x86_64/x86_64.json
+                        --Xcxx -I$SWIFT_INSTALLATION/lib/swift \
+                        --Xcxx -I$SWIFT_INSTALLATION/lib/swift/Block
                     mkdir $HOME/bin
                     mv .build/release/ssgc $HOME/bin
                     echo "$HOME/bin" >> $GITHUB_PATH
@@ -73,7 +74,8 @@ jobs:
                     swift test -c release \
                         --no-parallel \
                         --filter SymbolGraphValidationTests \
-                        --destination Scripts/Linux/x86_64/x86_64.json
+                        --Xcxx -I$SWIFT_INSTALLATION/lib/swift \
+                        --Xcxx -I$SWIFT_INSTALLATION/lib/swift/Block
 
     macos:
         runs-on: macos-15
