--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -59,8 +59,8 @@ jobs:
                     swift build -c release \
                         --product ssgc \
                         --explicit-target-dependency-import-check=error \
-                        --Xcxx -I$SWIFT_INSTALLATION/lib/swift \
-                        --Xcxx -I$SWIFT_INSTALLATION/lib/swift/Block
+                        -Xcxx -I$SWIFT_INSTALLATION/lib/swift \
+                        -Xcxx -I$SWIFT_INSTALLATION/lib/swift/Block
                     mkdir $HOME/bin
                     mv .build/release/ssgc $HOME/bin
                     echo "$HOME/bin" >> $GITHUB_PATH
@@ -73,8 +73,8 @@ jobs:
                     swift test -c release \
                         --no-parallel \
                         --filter SymbolGraphValidationTests \
-                        --Xcxx -I$SWIFT_INSTALLATION/lib/swift \
-                        --Xcxx -I$SWIFT_INSTALLATION/lib/swift/Block
+                        -Xcxx -I$SWIFT_INSTALLATION/lib/swift \
+                        -Xcxx -I$SWIFT_INSTALLATION/lib/swift/Block
 
     macos:
         runs-on: macos-15
