return to a symbolgraph-extract based model, and pass -fmodule-map (#408)
* return to a symbolgraph-extract based model, and pass -fmodule-map along with includes

* we shouldn’t actually need include paths if we have modulemaps

* i think we need --no-parallel here

* which swift?

* the runner uses a different runtime layout

* ?

* no double dash???

* centralize build planning logic in ModuleGraph

* fix failure to dump all stdlib modules

* create missing directories

* port SymbolGraphPartTests to Swift Testing, and update expectations to reflect bugs that have been fixed in the Swift 6.0 compiler

* add a test case for reexported symbols

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -57,7 +57,7 @@ jobs:
                 run: |
                     swift --version
                     swift build -c release \
-                        --build-tests \
+                        --product ssgc \
                         --explicit-target-dependency-import-check=error \
                         -Xcxx -I$SWIFT_INSTALLATION/lib/swift \
                         -Xcxx -I$SWIFT_INSTALLATION/lib/swift/Block
@@ -71,7 +71,7 @@ jobs:
             -   name: Validate packages
                 run: |
                     swift test -c release \
-                        --skip-build \
+                        --no-parallel \
                         --filter SymbolGraphValidationTests \
                         -Xcxx -I$SWIFT_INSTALLATION/lib/swift \
                         -Xcxx -I$SWIFT_INSTALLATION/lib/swift/Block
@@ -102,4 +102,5 @@ jobs:
             -   name: Validate packages
                 run: |
                     swift test -c release \
+                        --no-parallel \
                         --filter SymbolGraphValidationTests
