--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /Assets/secrets/
 /Assets/icons/*.jpg
 
+/TestModules/Determinism/*.json
 /TestModules/SymbolGraphs/*.json
 /TestModules/*.json
 /TestPackages/*.bson
