--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -19,8 +19,8 @@ jobs:
             -   name: Install Swift
                 uses: tayloraswift/swift-install-action@master
                 with:
-                    swift-prefix: "swift-6.1.2-release/ubuntu2404/swift-6.1.2-RELEASE"
-                    swift-id: "swift-6.1.2-RELEASE-ubuntu24.04"
+                    swift-prefix: "swift-6.2-release/ubuntu2404/swift-6.2-RELEASE"
+                    swift-id: "swift-6.2-RELEASE-ubuntu24.04"
 
             #   This installs an older version of Unidoc, not the one we are testing.
             #   We use `--static-swift-stdlib` so it doesn’t matter if the Unidoc binary was
@@ -33,9 +33,9 @@ jobs:
 
             -   name: Build documentation
                 run: |
-                    unidoc compile -I .. \
+                    unidoc compile \
                         --ci fail-on-errors \
-                        --package-name swift-unidoc \
+                        --project-path .. \
                         --swift-toolchain $SWIFT_INSTALLATION
 
     macos:
@@ -53,6 +53,6 @@ jobs:
 
             -   name: Build documentation
                 run: |
-                    unidoc compile -I .. \
+                    unidoc compile \
                         --ci fail-on-errors \
-                        --package-name swift-unidoc
+                        --project-path ..
