--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -35,7 +35,7 @@ jobs:
                 run: |
                     unidoc compile \
                         --ci fail-on-errors \
-                        --project-path .. \
+                        --project-path . \
                         --swift-toolchain $SWIFT_INSTALLATION
 
     macos:
@@ -55,4 +55,4 @@ jobs:
                 run: |
                     unidoc compile \
                         --ci fail-on-errors \
-                        --project-path ..
+                        --project-path .
