--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -19,8 +19,8 @@ jobs:
             -   name: Install Swift
                 uses: tayloraswift/swift-install-action@master
                 with:
-                    swift-prefix: "swift-6.2-release/ubuntu2404/swift-6.2-RELEASE"
-                    swift-id: "swift-6.2-RELEASE-ubuntu24.04"
+                    swift-prefix: "swift-6.2.3-release/ubuntu2404/swift-6.2.3-RELEASE"
+                    swift-id: "swift-6.2.3-RELEASE-ubuntu24.04"
 
             #   This installs an older version of Unidoc, not the one we are testing.
             #   We use `--static-swift-stdlib` so it doesn’t matter if the Unidoc binary was
@@ -50,6 +50,9 @@ jobs:
 
             -   name: Checkout repository
                 uses: actions/checkout@v3
+
+            -   name: Select Xcode 26.2
+                run: sudo xcode-select -s /Applications/Xcode_26.2.app/Contents/Developer
 
             -   name: Build documentation
                 run: |
