--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -47,8 +47,8 @@ jobs:
             -   name: Install Swift
                 uses: tayloraswift/swift-install-action@master
                 with:
-                    swift-prefix: "swift-6.2-release/ubuntu2404/swift-6.2-RELEASE"
-                    swift-id: "swift-6.2-RELEASE-ubuntu24.04"
+                    swift-prefix: "swift-6.2.3-release/ubuntu2404/swift-6.2.3-RELEASE"
+                    swift-id: "swift-6.2.3-RELEASE-ubuntu24.04"
 
             -   name: Checkout repository
                 uses: actions/checkout@v3
@@ -85,6 +85,9 @@ jobs:
         steps:
             -   name: Checkout repository
                 uses: actions/checkout@v3
+
+            -   name: Select Xcode 26.2
+                run: sudo xcode-select -s /Applications/Xcode_26.2.app/Contents/Developer
 
             -   name: Build release
                 run: |
